--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- have to add this index.php and composer.json files. go through git add .a
+-->
 <!DOCTYPE html>
 <html>
 	<head lang="en">
@@ -5,15 +7,23 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>  </title>
-		<!-- Styles -->
-		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">		
-	</head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>		
 
 	<body>
-	<h1>Love doing this, so darn hard, reward big</h1>
-
-
+	<h1>Love doing this, so darn hard, reward big.</h1>
 	
+	<div class="heart"></div>
+	
+	<header>(This page is actually about trying out APIs and seeing the results in the console.)</header>
+	
+	<div class="api-calls">
+
+	</div>
+	<!-- Scripts -->
+	<script type="text/javascript" src="app.js"></script>
 	</body>
+	
 
 </html>
+	
